--- a/styles/modules-center/_modulesCenter.scss
+++ b/styles/modules-center/_modulesCenter.scss
@@ -25,9 +25,9 @@ bar-date {
   color: $white;
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin-top: -6px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  margin-top: -8px;
   margin-bottom: -8px;
 }
 
